--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Portfolio Site",
   "main": "app.js",
   "scripts": {
-    "start": "npx nodemon"
+    "test": "echo \"Error: no test specified\" && exit 1"
+    // "start": "npx nodemon"
+  },
+  "engines": {
+    "node": "4.2.4"
   },
   "repository": {
     "type": "git",
