--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Portfolio Site",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon"
   },
   "engines": {
     "node": "14.12.0"
